2003/12/16 00:02 (+0100) kaffeetisch

	* xs/GnomeConfig.xs
	* xs/GnomeI18N.xs
	* xs/GnomeIconLookup.xs
	* xs/GnomeIconTheme.xs
	* xs/GnomeProgram.xs: Add API documentation.

2003/12/15 01:12 (+0100) kaffeetisch

	A t/TestBoilerplate
	* t/*: Put some boilerplate code into an external file.  Skip most
	tests if Gtk2->init_check fails.

	* README: Reformat slightly.

	* Gnome2.pm
	* META.yml: Bump version to 0.90.

2003/12/14 20:48 (+0100) kaffeetisch

	* xs/GnomeAppHelper.xs: In the custom marshaller for GnomePopupMenu
	callbacks, don't use GPERL_CALLBACK_MARSHAL_INIT on callback because it
	would try to access callback->priv, which doesn't exist since callback
	is a plain SV.

2003/12/14 05:37 (+0100) kaffeetisch

	* xs/GnomeAppHelper.xs
	* xs/GnomePopupMenu.xs: Use custom marshalling for all callbacks
	specified in GnomeUIInfo's used from GnomePopupMenu.  In addition
	to making callbacks work, this even solves the user data problem
	in GnomePopupMenu.  Many thanks to muppet for this great idea.

	* t/GnomePopupMenu.t: Add some user data and callback bits to test
	our new toys.

2003/12/13 23:41 (+0100) kaffeetisch

	* t/GnomeConfig.t
	* xs/GnomeConfig.xs: Implement and test iterators.

2003/12/13 21:35 (+0100) kaffeetisch

	* t/GnomeAppHelper.t: Change the callback tests so that it's easy
	to know if they were actually called.  Make the install_menu_hints
	tests work.

	* gnome2perl.h
	* xs/GnomeAppHelper.xs: List all helper functions here.  Prefix
	them with "gnome2perl_".

	* xs/GnomeAppHelper.xs: Store and restore the "widget" member of
	GnomeUIInfo's if it exists.  Use GNOME2PERL_WIDGET_ARRAY_INDEX
	instead of the last used index + 1 for the widget's array index.
	Allow GNOME_APP_UI_ITEM_CONFIGURABLE to have callbacks.  If there
	is a callback, arrange for it to be invisible to the C backend --
	otherwise the SV would be stored and later used as if it were a
	function pointer, thus causing a segfault.  Use a global