@@ -56,6 +56,9 @@ and
 
 is the canonical reference.
 
+In addition to that, there's also the automatically generated API
+documentation: L<Gnome2::index>(3pm).
+
 The mapping described in L<Gtk2::api>(3pm) also applies to this module.
 
 To discuss this module, ask questions and flame/praise the authors, join
@@ -139,7 +142,8 @@ parameters.
 
 =head1 SEE ALSO
 
-L<perl>(1), L<Glib>(3pm), L<Gtk2>(3pm), L<Gtk2::api>(3pm).
+L<perl>(1), L<Gnome2::index>(3pm), L<Glib>(3pm), L<Gtk2>(3pm),
+L<Gtk2::api>(3pm).
 
 =head1 AUTHOR
 
