@@ -1,3 +1,7 @@
+2003/12/18 22:13 (+0100) kaffeetisch
+
+	* Gnome2.pm: Mention Gnome2::index.
+
 2003/12/16 00:02 (+0100) kaffeetisch
 
 	* xs/GnomeConfig.xs
